gpu, cmaa: reuse CopyTextureCHROMIUMResourceManager

In addition, prevent from using glCopyTexSubImage2D in
CopyTextureCHROMIUMResourceManager on Intel ChromeOS, because copy via
glDrawArrays is much faster in IA ChromeOS. However, glCopyTexSubImage2D is
faster in Android.

It looks Mesa bug, so I filed this issue to Mesa bugzilla; https://bugs.freedesktop.org/show_bug.cgi?id=98478

Perf data >
 test site: http://webglsamples.org/aquarium/aquarium.html
                                               glCopyTexSubImage2D glDrawArrays
 4k fish on Chromebook Pixel 2015 (Broadwell):      22 FPS           32.6 FPS
 4k fish on Ubuntu and Haswell:                     23 FPS           30.9 FPS
 500 fish on Android OnePlus One (Adreno 330):      25 FPS           22.5 FPS

BUG=535198
CQ_INCLUDE_TRYBOTS=master.tryserver.chromium.linux:linux_optional_gpu_tests_rel;master.tryserver.chromium.mac:mac_optional_gpu_tests_rel;master.tryserver.chromium.win:win_optional_gpu_tests_rel

Review-Url: https://codereview.chromium.org/2460973002
Cr-Commit-Position: refs/heads/master@{#429240}

Former-commit-id: 0c8b1229552985d8ed976b8d47e66ff983afceac