gpu/command_buffer/service/gles2_cmd_apply_framebuffer_attachment_cmaa_intel.h
@@ -14,6 +14,7 @@ class CMAAEffect;
 
 namespace gpu {
 namespace gles2 {
+class CopyTextureCHROMIUMResourceManager;
 class GLES2Decoder;
 class Framebuffer;
 
@@ -34,8 +35,10 @@ class GPU_EXPORT ApplyFramebufferAttachmentCMAAINTELResourceManager {
 
   // Applies the algorithm to the color attachments of the currently bound draw
   // framebuffer.
-  void ApplyFramebufferAttachmentCMAAINTEL(gles2::GLES2Decoder* decoder,
-                                           gles2::Framebuffer* framebuffer);
+  void ApplyFramebufferAttachmentCMAAINTEL(
+      gles2::GLES2Decoder* decoder,
+      gles2::Framebuffer* framebuffer,
+      gles2::CopyTextureCHROMIUMResourceManager* copier);
 
  private:
   // Applies the CMAA algorithm to a texture.
@@ -46,7 +49,6 @@ class GPU_EXPORT ApplyFramebufferAttachmentCMAAINTELResourceManager {
   void OnSize(GLint width, GLint height);
   void ReleaseTextures();
 
-  void CopyTexture(GLint source, GLint dest);
   GLuint CreateProgram(const char* defines,
                        const char* vs_source,
                        const char* fs_source);
@@ -65,7 +67,6 @@ class GPU_EXPORT ApplyFramebufferAttachmentCMAAINTELResourceManager {
   GLint width_;
   GLint height_;
 
-  GLuint copy_to_framebuffer_shader_;
   GLuint edges0_shader_;
   GLuint edges1_shader_;
   GLuint edges_combine_shader_;
@@ -73,7 +74,6 @@ class GPU_EXPORT ApplyFramebufferAttachmentCMAAINTELResourceManager {
   GLuint debug_display_edges_shader_;
 
   GLuint cmaa_framebuffer_;
-  GLuint copy_framebuffer_;
 
   GLuint rgba8_texture_;
   GLuint working_color_texture_;
@@ -91,7 +91,6 @@ class GPU_EXPORT ApplyFramebufferAttachmentCMAAINTELResourceManager {
   static const char vert_str_[];
   static const char cmaa_frag_s1_[];
   static const char cmaa_frag_s2_[];
-  static const char copy_frag_str_[];
 
   DISALLOW_COPY_AND_ASSIGN(ApplyFramebufferAttachmentCMAAINTELResourceManager);
 };
